risc0/zirgen/dsl/test/repro/component_as_val_error.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error: attempted to use type name 'Bogus' as a value

component Bogus() {
}

component Top() {
  y := Reg(Bogus);
}

